fix: img align

--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -1,4 +1,5 @@
 body {
+  font-size: 16px;
   font-family: "Open Sans", sans-serif;
   line-height: 1.5;
 }
